--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --tran-03: all 0.2s ease;
+    --tran-02: all 0.2s ease;
     --tran-03: all 0.3s ease;
     --tran-04: all 0.4s ease;
     --tran-05: all 0.5s ease;
@@ -23,6 +23,9 @@ body{
     font-size: 16px;
     font-weight: 500;
     color: #707070;
+    transition: var(--tran-03);
+    white-space: nowrap;
+    opacity: 1;
 }
 
 .sidebar .image{
@@ -40,23 +43,46 @@ body{
     width: 250px;
     padding: 10px 14px;
     background: #FFF;
+    transition: var(--tran-05);
 }
+
+.sidebar.close{
+    width: 88px;
+}
+
+.sidebar.close .text{
+    opacity: 0;
+}
+
 
 .sidebar li{
     height: 50px;
-    background: red;
     margin-top: 10px;
     list-style: none;
     display: flex;
     align-items: center;
 }
 
+.sidebar li .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    font-size: 20px;
+}
+.sidebar li .icon,
+.sidebar li text{
+    color: #707070;
+    transition: var(--tran-02);
+}
+
+
 .sidebar header{
     position: relative;
 }
 
 .sidebar .image-text img{
-    width: 80px;
+    width: 60px;
     border-radius: 6px;
 }
 
@@ -78,7 +104,7 @@ header .image-text .header-text{
     position: absolute;
     top: 50%;
     right: -25px;
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
     background: #695CFE;
@@ -87,4 +113,36 @@ header .image-text .header-text{
     justify-content: center;
     border-radius: 50%;
     color: #FFF;
+    cursor: pointer;
+    transition: var(--tran-03);
+}
+
+.sidebar.close header .toggle{
+    transform: translateY(-50%);
+}
+
+.sidebar li a{
+   height: 100%;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   text-decoration: none;
+   border-radius: 6px;
+   transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+    background: #695CFE;
+}
+
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text{
+    color: #FFF;
+}
+
+.sidebar .menu-bar{
+    height: calc(100% - 80px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
