--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -28,7 +28,7 @@
     height: 100%;
     width: 250px;
     padding: 10px 14px;
-    background: #FFF;
+    background: #ffffff;
     transition: var(--tran-05);
     z-index: 100;
 }
