--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,6 +32,14 @@ i{
     width: 1%;
 }
 
+.fs-8{
+    font-size: 15px;
+}
+
+.fs-9{
+    font-size: 12px;
+}
+
 .conteudo .container{
     min-width: 1100.40px;
 }
@@ -62,7 +70,7 @@ i{
 }
 
 .item .col-1{
-    margin-right: 13px;
+    margin-right: 14px;
 }
 
 
@@ -76,13 +84,24 @@ i{
     justify-content: center;
 }
 
-.fs-8{
-    font-size: 15px;
+.row .botao-cartao{
+    width: 95%;
+    height: 100px;
+    background: #ececec;
+    color: #8c8c8c;
+    border: none;
+    margin-top: 15px;
 }
 
-.fs-9{
-    font-size: 12px;
+.row .botao-cartao:hover{
+    border: 1px solid gray;
 }
+
+
+.row .botao-cartao .d-block{
+    height: 50%;
+}
+
 
 /* ==== CORES DOS ÍCONES ==== */
 
@@ -108,6 +127,14 @@ i{
 
 .mastercard{
     background: rgb(180, 76, 42);
+}
+
+.visa{
+    background: rgb(19, 12, 199);
+}
+
+.venmo{
+    background: rgb(0, 115, 255);
 }
 
 
