--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -44,6 +44,10 @@ i{
     width: 90%;
 }
 
+.botao-repetir{
+    cursor: pointer;
+}
+
 .conteudo .container{
     min-width: 1100.40px;
 }
@@ -135,6 +139,34 @@ i{
     width: 25%;
 }
 
+.form-group .repetir{
+    border: 2px solid green;
+    border-radius: 360px;
+    width: 35px;
+    height: 35px;
+    color: green;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#botao-salvar .salvar{
+    background: green;
+    border-radius: 360px;
+    font-size: 55px;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-group input, 
+.form-group select,
+.form-group textarea{
+    border: 1px solid black;
+}
 
 /* ==== CORES DOS ÍCONES ==== */
 
