change input name for username

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -55,7 +55,7 @@
                         <form name="signup" action="/auth/signUp" method="post">
                             <div class="mb-3">
                                 <label>Nome:</label>
-                                <input name="name" type="nome" class="form-control" id="login_email">
+                                <input name="username" type="nome" class="form-control" id="login_email">
                             </div>
                             <div class="mb-3">
                                 <label>Email:</label>
