create loggout to user

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -73,7 +73,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="../index.html">
+                    <a href="/auth/loggout">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Sair</span>
                     </a>
@@ -664,5 +664,7 @@
         crossorigin="anonymous"></script>
 
 </body>
-
+<script>
+    
+</script>
 </html>
