Finalizadno gráfico e tabela da pg Relatórios

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -172,6 +172,11 @@ i{
     border: 1px solid black;
 }
 
+.botao-mes button{
+    border: none;
+    background: none;
+}
+
 /* ==== CORES DOS ÍCONES ==== */
 
 .mercado{
