--- a/src/views/lancamentos.html
+++ b/src/views/lancamentos.html
@@ -40,31 +40,31 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/home">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Início</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/lancamentos">
                             <i class='bx bx-wallet icon'></i>
-                            <span class="text nav-text">Carteira</span>
+                            <span class="text nav-text">Lançamentos</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/relatorios">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Análise geral</span>
+                            <span class="text nav-text">Relatórios</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/perfil">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Perfil</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/notificacoes">
                             <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Notificações</span>
                         </a>
@@ -74,7 +74,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="../index.html">
+                    <a href="/auth/loggout">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Sair</span>
                     </a>
@@ -95,7 +95,8 @@
                 <div class="col-6 p-0 d-flex align-items-center">
                     <span class="display-3 fs-4 m-2">Novo lançamento</span>
                     <button class="botao">
-                        <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal" data-bs-target=""></i>
+                        <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal" 
+                        data-bs-target="#novo_lancamento"></i>
                     </button>
                 </div>
                 <div class="botao-mes col-6 d-flex justify-content-end align-items-center">
@@ -125,7 +126,7 @@
                                 <div class="col-10 d-flex align-items-center">
                                     <span>Mercado</span>
                                 </div>
-                            </div>        
+                            </div>
                         </td>
                         <td>Despesas</td>
                         <td>R$-200</td>
@@ -141,7 +142,7 @@
                                 <div class="col-10 d-flex align-items-center">
                                     <span>Roupas</span>
                                 </div>
-                            </div>        
+                            </div>
                         </td>
                         <td>Despesas</td>
                         <td>R$-1000</td>
@@ -157,7 +158,7 @@
                                 <div class="col-10 d-flex align-items-center">
                                     <span>Venda</span>
                                 </div>
-                            </div>        
+                            </div>
                         </td>
                         <td>Receita</td>
                         <td>R$4500</td>
@@ -186,7 +187,7 @@
                                 <div class="col-10 d-flex align-items-center">
                                     <span>Roupas</span>
                                 </div>
-                            </div>        
+                            </div>
                         </td>
                         <td>Despesas</td>
                         <td>R$-120</td>
@@ -202,7 +203,7 @@
                                 <div class="col-10 d-flex align-items-center">
                                     <span>Venda</span>
                                 </div>
-                            </div>        
+                            </div>
                         </td>
                         <td>Receita</td>
                         <td>R$100</td>
@@ -229,20 +230,140 @@
                     </div>
                 </div>
             </div>
+
+           <!-- MODAL NOVO LANÇAMENTO -->
+
+           <div class="modal fade" id="novo_lancamento" tabindex="-1" aria-labelledby="novoLancamento" aria-hidden="true">
+            <div class="modal-dialog" style="width: 100%;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="tituloModal">Novo lançamento</h5>
+                        <i class='bx bx-dollar text-primary fs-1 mx-2'></i>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <!-- caixas de texto -->
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-8">
+                                        <label for="descricao">Descrição</label>
+                                        <input class="form-control" type="text" id="cvv">
+                                    </div>
+                                    <div class="col-4">
+                                        <label for="tipo">Tipo</label>
+                                        <select class="form-control" id="dia_fechamento">
+                                            <option>Receita</option>
+                                            <option>Despesa</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row my-3">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-4">
+                                                <label for="valor">Valor</label>
+                                                <input class="form-control" type="text" id="valor">
+                                            </div>
+                                            <div class="col-4">
+                                                <label for="data">Data</label>
+                                                <input class="form-control" type="date" id="valor">
+                                            </div>
+                                            <div class="col-4">
+                                                <label for="categoria">Categoria</label>
+                                                <select class="form-control" id="mes_fechamento">
+                                                    <option>Janeiro</option>
+                                                    <option>Fevereiro</option>
+                                                    <option>Março</option>
+                                                    <option>Abril</option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- textarea -->
+                                <div class="form-group">
+                                    <label for="mensagem">Observação (opcional)</label>
+                                    <textarea class="form-control" id="mensagem" rows="3"></textarea>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="row my-3 botao-repetir" onclick="repetir()">
+                                        <div class="col-1">
+                                            <i class='bx bx-repeat repetir'></i>
+                                        </div>
+                                        <div class="col d-flex align-items-center">
+                                            <span class="fs-6 fw-light" style="color: green">repetir</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group mx-3 d-none" id="opcoes_repeticao">
+                                    <div class="form-check">
+                                        <div class="row">
+                                            <div class="col-4">
+                                                <input type="radio" class="form-check-input" id="radio1" name="optradio"
+                                                    value="option1" checked>parcelado em:
+
+                                            </div>
+                                            <div class="col-3">
+                                                <select class="form-control" id="valor">
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-5">
+                                                <select class="form-control" id="escala">
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+
+                                        </div>
+                                        <label class="form-check-label" for="radio1"></label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
+                                            value="option2">receita fixa
+                                        <label class="form-check-label" for="radio2"></label>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+
+                            <div class="d-flex justify-content-center">
+                                <button class="my-5" id="botao-salvar" style="border: none;">
+                                    <i class='bx bx-check salvar'></i>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FIM DO MODAL NOVO LANÇAMENTO -->
+
+
         </div>
     </section>
 
+    <script src="../js/sidebar.js"></script>
+    <script src="../js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <script src="../js/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
 </body>
-
-<script src="../js/sidebar.js"></script>
-<script src="../js/script.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
-<script src="../js/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
 
 </html>
