updates routers Relatorios

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -39,7 +39,7 @@
             <div class="menu">
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="">
+                        <a href="/home">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Início</span>
                         </a>
@@ -365,7 +365,7 @@
                         <div class="row">
                             <div class="col-6"></div>
                             <div class="col-6 my-3 text-center">
-                                <a href="relatorios.html" class="btn btn-sm btn-secondary w-75">
+                                <a href="/relatorios" class="btn btn-sm btn-secondary w-75">
                                     Relatório
                                 </a>
                             </div>
