--- a/src/views/home.html
+++ b/src/views/home.html
@@ -28,7 +28,7 @@
                 </span>
 
                 <div class="text header-text">
-                    <span class="name">Eduardo Amaral</span>
+                    <span id="boasvindas1" class="name"></span>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
     <section class="conteudo"> <!-- ==== INÍCIO DO CONTEÚDO PRINCIPAL ==== -->
         <div class="container my-5">
             <div class="row">
-                <h1 class="display-4 fs-4 fw-bold">Boas-vindas, Eduardo</h1>
+                <h1 class="display-4 fs-4 fw-bold"> Boas-vindas <span id="boasvindas2" ></span></h1>
             </div>
 
             <div class="row mt-4"> <!-- ==== PRIMERA ROW ===== -->
@@ -615,7 +615,7 @@
                                                         <option>04</option>
                                                         <option>...</option>
                                                     </select>
-                                                </div>                         
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -631,7 +631,7 @@
                                                         <option>04</option>
                                                         <option>...</option>
                                                     </select>
-                                                </div>                           
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -675,6 +675,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
+    <script>
+        fetch("/auth/profile", { method: "get" })
+            .then(response => response.text())
+            .then(data => {
+                user = JSON.parse(data);
+                console.log(user);
+                const ids = ["boasvindas1", "boasvindas2"];
+
+                ids.forEach(id => {
+                    const element = document.getElementById(id);
+                    if (element) {
+                        element.innerText = `${user.username}`;
+                    }
+                });
+            })
+            .catch(error => {
+                console.log("Ocorreu um erro:", error);
+            });
+    </script>
 
 </body>
 
