--- a/src/views/lancamentos.html
+++ b/src/views/lancamentos.html
@@ -29,7 +29,7 @@
                 </span>
 
                 <div class="text header-text">
-                    <span class="name">Eduardo Amaral</span>
+                    <span id="boasvindas1" class="name">Eduardo Amaral</span>
                 </div>
             </div>
 
@@ -364,6 +364,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
+        <script>
+            fetch("/auth/profile", { method: "get" })
+                .then(response => response.text())
+                .then(data => {
+                    user = JSON.parse(data);
+                    console.log(user);
+                    const ids = ["boasvindas1", "boasvindas2"];
+    
+                    ids.forEach(id => {
+                        const element = document.getElementById(id);
+                        if (element) {
+                            element.innerText = `${user.username}`;
+                        }
+                    });
+                })
+                .catch(error => {
+                    console.log("Ocorreu um erro:", error);
+                });
+        </script>
 </body>
 
 </html>
