--- a/src/views/perfil.html
+++ b/src/views/perfil.html
@@ -122,14 +122,14 @@
 
             <div class="row my-5 ">
                 <div class="col mx-4">
-                    <h3 class="fw-bold">Sugestões para você</h3>
+                    <!-- <h3 class="fw-bold">Sugestões para você</h3> -->
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-6 b mx-1">
+                <div class="col-6 mx-1">
                     
                 </div>
-                <div class="col-5 b mx-1">
+                <div class="col-5 mx-1">
 
                 </div>
             </div>
