--- a/src/views/lancamentos.html
+++ b/src/views/lancamentos.html
@@ -95,14 +95,15 @@
                 <div class="col-6 p-0 d-flex align-items-center">
                     <span class="display-3 fs-4 m-2">Novo lançamento</span>
                     <button class="botao">
-                        <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal" 
-                        data-bs-target="#novo_lancamento"></i>
+                        <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal"
+                            data-bs-target="#novo_lancamento"></i>
                     </button>
                 </div>
                 <div class="botao-mes col-6 d-flex justify-content-end align-items-center">
-                    <button><</button>
-                    <button class="mx-3">Março</button>
-                    <button>></button>
+                    <button>
+                        << /button>
+                            <button class="mx-3">Março</button>
+                            <button>></button>
                 </div>
             </div>
 
@@ -231,124 +232,125 @@
                 </div>
             </div>
 
-           <!-- MODAL NOVO LANÇAMENTO -->
+            <!-- MODAL NOVO LANÇAMENTO -->
 
-           <div class="modal fade" id="novo_lancamento" tabindex="-1" aria-labelledby="novoLancamento" aria-hidden="true">
-            <div class="modal-dialog" style="width: 100%;">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="tituloModal">Novo lançamento</h5>
-                        <i class='bx bx-dollar text-primary fs-1 mx-2'></i>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <!-- caixas de texto -->
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <label for="descricao">Descrição</label>
-                                        <input class="form-control" type="text" id="cvv">
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="tipo">Tipo</label>
-                                        <select class="form-control" id="dia_fechamento">
-                                            <option>Receita</option>
-                                            <option>Despesa</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row my-3">
-                                <div class="col">
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-4">
-                                                <label for="valor">Valor</label>
-                                                <input class="form-control" type="text" id="valor">
-                                            </div>
-                                            <div class="col-4">
-                                                <label for="data">Data</label>
-                                                <input class="form-control" type="date" id="valor">
-                                            </div>
-                                            <div class="col-4">
-                                                <label for="categoria">Categoria</label>
-                                                <select class="form-control" id="mes_fechamento">
-                                                    <option>Janeiro</option>
-                                                    <option>Fevereiro</option>
-                                                    <option>Março</option>
-                                                    <option>Abril</option>
-                                                    <option>...</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- textarea -->
+            <div class="modal fade" id="novo_lancamento" tabindex="-1" aria-labelledby="novoLancamento"
+                aria-hidden="true">
+                <div class="modal-dialog" style="width: 100%;">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="tituloModal">Novo lançamento</h5>
+                            <i class='bx bx-dollar text-primary fs-1 mx-2'></i>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <!-- caixas de texto -->
                                 <div class="form-group">
-                                    <label for="mensagem">Observação (opcional)</label>
-                                    <textarea class="form-control" id="mensagem" rows="3"></textarea>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="row my-3 botao-repetir" onclick="repetir()">
-                                        <div class="col-1">
-                                            <i class='bx bx-repeat repetir'></i>
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <label for="descricao">Descrição</label>
+                                            <input class="form-control" type="text" id="cvv">
                                         </div>
-                                        <div class="col d-flex align-items-center">
-                                            <span class="fs-6 fw-light" style="color: green">repetir</span>
+                                        <div class="col-4">
+                                            <label for="tipo">Tipo</label>
+                                            <select class="form-control" id="dia_fechamento">
+                                                <option>Receita</option>
+                                                <option>Despesa</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="form-group mx-3 d-none" id="opcoes_repeticao">
-                                    <div class="form-check">
-                                        <div class="row">
-                                            <div class="col-4">
-                                                <input type="radio" class="form-check-input" id="radio1" name="optradio"
-                                                    value="option1" checked>parcelado em:
-
+                                <div class="row my-3">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <div class="row">
+                                                <div class="col-4">
+                                                    <label for="valor">Valor</label>
+                                                    <input class="form-control" type="text" id="valor">
+                                                </div>
+                                                <div class="col-4">
+                                                    <label for="data">Data</label>
+                                                    <input class="form-control" type="date" id="valor">
+                                                </div>
+                                                <div class="col-4">
+                                                    <label for="categoria">Categoria</label>
+                                                    <select class="form-control" id="mes_fechamento">
+                                                        <option>Janeiro</option>
+                                                        <option>Fevereiro</option>
+                                                        <option>Março</option>
+                                                        <option>Abril</option>
+                                                        <option>...</option>
+                                                    </select>
+                                                </div>
                                             </div>
-                                            <div class="col-3">
-                                                <select class="form-control" id="valor">
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option>...</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-5">
-                                                <select class="form-control" id="escala">
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option>...</option>
-                                                </select>
-                                            </div>
-
                                         </div>
-                                        <label class="form-check-label" for="radio1"></label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
-                                            value="option2">receita fixa
-                                        <label class="form-check-label" for="radio2"></label>
-                                    </div>
-                                </div>
-                                </div>
-                            </div>
+                                        <!-- textarea -->
+                                        <div class="form-group">
+                                            <label for="mensagem">Observação (opcional)</label>
+                                            <textarea class="form-control" id="mensagem" rows="3"></textarea>
+                                        </div>
 
-                            <div class="d-flex justify-content-center">
-                                <button class="my-5" id="botao-salvar" style="border: none;">
-                                    <i class='bx bx-check salvar'></i>
-                                </button>
-                            </div>
-                        </form>
+                                        <div class="form-group">
+                                            <div class="row my-3 botao-repetir" onclick="repetir()">
+                                                <div class="col-1">
+                                                    <i class='bx bx-repeat repetir'></i>
+                                                </div>
+                                                <div class="col d-flex align-items-center">
+                                                    <span class="fs-6 fw-light" style="color: green">repetir</span>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group mx-3 d-none" id="opcoes_repeticao">
+                                            <div class="form-check">
+                                                <div class="row">
+                                                    <div class="col-4">
+                                                        <input type="radio" class="form-check-input" id="radio1"
+                                                            name="optradio" value="option1" checked>parcelado em:
+
+                                                    </div>
+                                                    <div class="col-3">
+                                                        <select class="form-control" id="valor">
+                                                            <option></option>
+                                                            <option></option>
+                                                            <option></option>
+                                                            <option>...</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-5">
+                                                        <select class="form-control" id="escala">
+                                                            <option></option>
+                                                            <option></option>
+                                                            <option></option>
+                                                            <option>...</option>
+                                                        </select>
+                                                    </div>
+
+                                                </div>
+                                                <label class="form-check-label" for="radio1"></label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="radio2" name="optradio"
+                                                    value="option2">receita fixa
+                                                <label class="form-check-label" for="radio2"></label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex justify-content-center">
+                                    <button class="my-5" id="botao-salvar" style="border: none;">
+                                        <i class='bx bx-check salvar'></i>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- FIM DO MODAL NOVO LANÇAMENTO -->
+            <!-- FIM DO MODAL NOVO LANÇAMENTO -->
 
 
         </div>
@@ -364,25 +366,79 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-        <script>
-            fetch("/auth/profile", { method: "get" })
+    <script>
+        fetch("/auth/profile", { method: "get" })
+            .then(response => response.text())
+            .then(data => {
+                user = JSON.parse(data);
+                const ids = ["boasvindas1", "boasvindas2"];
+
+                ids.forEach(id => {
+                    const element = document.getElementById(id);
+                    if (element) {
+                        element.innerText = `${user.username}`;
+                    }
+                });
+
+                const infoUser = {
+                    idUser: user.idUser
+                };
+
+                return fetch("/api/accounts/getAccount", {
+                    method: "post",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(infoUser)
+                });
+            })
+            .then(response => response.text())
+            .then(data => {
+                console.log(data)
+                const account = JSON.parse(data);
+                // console.log(account[0])
+                // console.log(account[0].current_balance)
+                const ids = ["saldo1", "saldo2"];
+
+                ids.forEach(id => {
+                    const element = document.getElementById(id);
+                    if (element) {
+                        element.innerText = `R$${account[account.length - 1].current_balance}`;
+                    }
+                });
+
+                const infoAccount = {
+                    idAccount: account.idAccount
+                };
+
+                return fetch("/api/accounts/getTransactions", {
+                    method: "post",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(infoAccount)
+                })
                 .then(response => response.text())
                 .then(data => {
-                    user = JSON.parse(data);
-                    console.log(user);
-                    const ids = ["boasvindas1", "boasvindas2"];
-    
-                    ids.forEach(id => {
-                        const element = document.getElementById(id);
-                        if (element) {
-                            element.innerText = `${user.username}`;
-                        }
-                    });
-                })
-                .catch(error => {
-                    console.log("Ocorreu um erro:", error);
+                console.log(data)
+                const account = JSON.parse(data);
+                console.log(account[0])
+                const ids = ["saldo1", "saldo2"];
+
+                ids.forEach(id => {
+                    const element = document.getElementById(id);
+                    if (element) {
+                        element.innerText = `R$${account[account.length - 1].current_balance}`;
+                    }
                 });
-        </script>
+                return fetch("/api/accounts/getInsert", {
+                    method: "post",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(infoAccount)
+                });
+            })
+            })
+            
+            .catch(error => {
+                console.log("Ocorreu um erro:", error);
+            });
+    </script>
 </body>
 
 </html>
