refactoring home code

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -87,7 +87,7 @@
     <section class="conteudo"> <!-- ==== INÍCIO DO CONTEÚDO PRINCIPAL ==== -->
         <div class="container my-5">
             <div class="row">
-                <h1 class="display-4 fs-4 fw-bold"> Boas-vindas <span id="boasvindas2"></span></h1>
+                <h1 class="display-4 fs-4 fw-bold"> Boas-vindas, <span id="boasvindas2"></span>!</h1>
             </div>
 
             <div class="row mt-4"> <!-- ==== PRIMERA ROW ===== -->
