add dynamic income and expense

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -102,7 +102,7 @@
                         <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal"
                             data-bs-target="#add_receita_despesa" onclick="dispararModal('receita')"></i>
                     </button>
-                    <h3 class="text-success">R$1700</h3>
+                    <h3 class="text-success" id="receitaMensal">R$1700</h3>
                 </div>
 
                 <div class="col-1">
@@ -116,7 +116,7 @@
                         <i class='bx bx-minus-circle fs-1 text-danger' data-bs-toggle="modal"
                             data-bs-target="#add_receita_despesa" onclick="dispararModal('despesa')"></i>
                     </button>
-                    <h3 class="text-danger">R$-800</h3>
+                    <h3 class="text-danger" id="despesaMensal">R$-800</h3>
                 </div>
             </div>
             <!-- ==== FIM DA PRIMERA ROW ===== -->
