Inserindo div "Contas a pagar" dinamicamente

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -129,7 +129,7 @@
                     <div class="col-4">
                         <h4>Contas a pagar</h4>
                         <span class="d-block display-1 text-center fs-5 text-danger my-3">Hoje</span>
-                        <ul class="lista-itens secao-ul-contas">
+                        <ul class="lista-itens secao-ul-contas" id="lista_itens_hoje">
                             <li class="item">
                                 <div class="col-1">
                                     <i class='bx bxs-cart item-icon mercado'></i>
@@ -498,10 +498,10 @@
                                         <div class="form-group">
                                             <label for="estados">Categoria</label>
                                             <select class="form-control" id="categoriasReceita">
-                                                <option value="1">Investimento</option>
-                                                <option value="2">Vendas</option>
-                                                <option value="3">Salário</option>
-                                                <option value="4">Outros</option>
+                                                <option value="10">Investimento</option>
+                                                <option value="11">Vendas</option>
+                                                <option value="12">Salário</option>
+                                                <option value="13">Outros</option>
                                             </select>
                                         </div>
                                     </div>
@@ -769,9 +769,8 @@
         </div>
     </section>
     <!-- ==== FIM DO INÍCIO DO CONTEÚDO PRINCIPAL ==== -->
-
+    
     <script src="../js/sidebar.js"></script>
-    <script src="../js/script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
     <script src="../js/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -780,8 +779,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-        <script src="js/functions.js"></script>
-        <script src="js/home.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/home.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 
